--- a/templates/advert/index.html.twig
+++ b/templates/advert/index.html.twig
@@ -9,12 +9,9 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello ! ✅</h1>
 
     This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/ouerg/PhpstormProjects/symfony/src/Controller/AdvertController.php'|file_link(0) }}">src/Controller/AdvertController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/ouerg/PhpstormProjects/symfony/templates/advert/index.html.twig'|file_link(0) }}">templates/advert/index.html.twig</a></code></li>
-    </ul>
+
 </div>
 {% endblock %}
